--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -1001,6 +1001,12 @@ Why analyses with overlap true and false?
 \> Hit spatial distributions
 \> Kinematic peak method
 
+\fig{fig/pdf/al_prof_hits.pdf}{al prof hits}{Typical hit distributions. Left: simulation (what processes?), Right: data from 21 Sep. For the real data we show near stations only since the far ones look qualitatively the same.
+% analysis with vsym2 geometry
+}
+
+\fig{fig/pdf/al_prof_fits.pdf}{al prof fits}{Details for the fit in 56 near unit. (data 21 Sep). Red points excluded from the fit.}
+
 \section[al elast]{Elastic Alignment}
 
 \section[al sum]{Summary}
