--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -1009,6 +1009,8 @@ Why analyses with overlap true and false?
 
 \section[al elast]{Elastic Alignment}
 
+\fig{fig/pdf/al_el_selection.pdf}{al el selection}{Selection of elastic events}
+
 \section[al sum]{Summary}
 
 \> tasks accomplished/non-accomplished
