--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -31,6 +31,15 @@ matrix				& $\mat M$				& slanted\cr\ln
 
 \> Description of TOTEM detectors
 
+\subsection{The Roman Pot system}
+
+\fig[15cm]{fig/external/RP_stations_original.pdf}{rp stations}{RP stations}
+\fig[10cm]{fig/external/rp_unit.jpg}{rp unit}{RP unit}
+\fig[10cm]{fig/external/rp.jpg}{rp rp}{A Roman Pot}
+\fig[10cm]{fig/external/rp_package.jpg}{rp package}{Detector package}
+\fig[10cm]{fig/external/hybrid2.jpg}{rp hybrid}{A hybrid with a silicon detector and four VFAT chips.}
+\fig[10cm]{fig/external/silicon_explained.png}{rp sensor}{A detail of a silicon sensor.}
+
 \section{Theoretical concepts}
 
 \> def of cross-section, t, xi
