--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -1001,15 +1001,51 @@ Why analyses with overlap true and false?
 \> Hit spatial distributions
 \> Kinematic peak method
 
-\fig{fig/pdf/al_prof_hits.pdf}{al prof hits}{Typical hit distributions. Left: simulation (what processes?), Right: data from 21 Sep. For the real data we show near stations only since the far ones look qualitatively the same.
+\fig{fig/pdf/al_prof_simu.pdf}{al prof simu}{A Geant4 simulation of hit distributions at ?? (what processes?)}
+
+\fig{fig/pdf/al_prof_hits.pdf}{al prof hits}{Typical hit distributions at near stations, where exactly ??. data from 21 Sep. The far stations look qualitatively the same.
 % analysis with vsym2 geometry
 }
 
-\fig{fig/pdf/al_prof_fits.pdf}{al prof fits}{Details for the fit in 56 near unit. (data 21 Sep). Red points excluded from the fit.}
+\fig{fig/pdf/al_prof_fits.pdf}{al prof fits}{Details for the fit in 56 near unit. (data 21 Sep). The fit lines have the same color code as in \Fg{al prof hits}. The green points excluded from the fit.}
 
 \section[al elast]{Elastic Alignment}
 
-\fig{fig/pdf/al_el_selection.pdf}{al el selection}{Selection of elastic events}
+
+Selection of elastic events. What we know
+\> angles the same left and right
+\> correlation between angle and position
+\> arrive at x ~ 0
+
+Three cuts (for each diagonal)
+\bitm
+\itm $\th_x$ equal left and right.
+\eqref{\hbox{distance from line } \De x^{56} = (-1 + a) \De x^{45} + b \hbox{ smaller than } 0.08\un{mm}\ ,}{al el cut 1}
+where $a$ and $b$ are small corrections \TODO{determined in iterations}
+In this section, $\De q \equiv q_F - q_N$
+
+\itm $\De y$ proportional to $y$
+\eqref{\hbox{distance from line } \De y = a y_N + b \hbox{ smaller than } 0.045\un{mm}\ ,}{al el cut 2}
+
+\itm $x$ close to 0
+\eqref{\hbox{distance from line } x = a y + b \hbox{ smaller than } 0.045\un{mm}\ ,}{al el cut 3}
+\eitm
+
+\fig{fig/pdf/al_el_selection.pdf}{al el selection}{Selection of elastic events. The black dots show events before the cut, colorful dots after. The red dots belong to 45 bottom -- 56 top diagonal, the blue to the other one. The lightgreen area represents the cut requirement. \TODO{data set, data reduction ?}}
+
+4 alignment methods
+\bitm
+\itm vertical fit in YX plots for the x position of the beam (for every unit)
+\itm fit of dy vs. y for far wrt. near vertical alignment (for every arm)
+\itm fit of y56 vs y45 for left wrt. right vertical alignment (for far and near units)
+\itm fit of vertical hit distributions for vertical alignment wrt. beam (for every unit)
+\eitm
+
+\fig{fig/pdf/al_el_plots.pdf}{al el plots}{Illustration of the elastic alignment methods. For methods 1 to 3 there are always three fits. The red line fits the red points only, similarly for the blue one. The green line represents a global fit. For the method 4, the violet curve shows a Gaussian fit.}
+
+Methods 1 and 2: all the fits are the same - the same misalignment of top and bottom pots. In other words, the TB alignment worked well!
+
+\TODO{Summary table, comparison of methods}
 
 \section[al sum]{Summary}
 
