--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -27,6 +27,9 @@ matrix				& $\mat M$				& slanted\cr\ln
 
 \>> smearing
 
+Hill's equation (Sec.~3.3 in \bref{wilson}, Eq.~(4.33) in \bref{dolezal} or in \bref{wiedemann})
+\eqref{x(s) = \sqrt{\be(s) \ep} \cos (\ph(s) + \ph_0)}{hill eq}
+
 \section{TOTEM}
 
 \> Description of TOTEM detectors
