--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -230,3 +230,25 @@
 		year="2006",
 		journal="XIth Blois Conference"
 }
+
+@Book{wilson,
+      author         = "Wilson, E.J.N.",
+      title          = "{An introduction to particle accelerators}",
+	  publisher		 = "Oxford University Press",
+      year           = "2001"
+}
+
+@Url{dolezal,
+    author  = "Doležal, Z.",
+	title = "Text k přednášce Vybrané kapitoly z urychlovačové fyziky",
+	url = "http://www-ucjf.troja.mff.cuni.cz/~dolezal/teach/accel/"		
+}
+
+@Book{wiedemann,
+      author         = "Wiedemann, H.",
+      title          = "{Particle accelerator physics: Basic principles and
+                        linear beam dynamics}",
+      year           = "1993",
+}
+
+
