--- a/2010/thesis/appendices.tex
+++ b/2010/thesis/appendices.tex
@@ -40,6 +40,34 @@ P--values shall be uniformly distributed on $\langle 0, 1\rangle$. $p\to 1$ mean
 
 Summary of key optics, if really needed...
 
+\htab{opt 3500 2.5}{The nominal optics with $\be^* = 2.5\un{m}$ and $E=2.5\un{TeV}$.}{\bln
+  ID & Cx (um)  & Lx (m)     & vx         & Cy (um)  & Ly (m)     & vy         & D          \cr\bln
+  0  &    -0.0  &    17.966  &    -1.958  &     0.0  &    29.710  &    -2.309  &    -0.087  \cr\ln
+  1  &    -0.0  &    17.966  &    -1.958  &     0.0  &    29.710  &    -2.309  &    -0.087  \cr\ln
+  2  &    -0.0  &    17.832  &    -1.968  &     0.0  &    29.696  &    -2.324  &    -0.087  \cr\ln
+  3  &     0.0  &    17.596  &    -1.987  &    -0.0  &    29.671  &    -2.348  &    -0.088  \cr\ln
+  4  &    -0.0  &    17.462  &    -1.997  &     0.1  &    29.657  &    -2.362  &    -0.089  \cr\ln
+  5  &    -0.0  &    17.462  &    -1.997  &     0.1  &    29.657  &    -2.362  &    -0.089  \cr\ln
+ 20  &    -0.0  &     2.315  &    -3.493  &     0.0  &    18.074  &    -3.730  &    -0.106  \cr\ln
+ 21  &    -0.0  &     2.315  &    -3.493  &     0.0  &    18.074  &    -3.730  &    -0.106  \cr\ln
+ 22  &    -0.0  &     2.180  &    -3.483  &     0.0  &    18.065  &    -3.752  &    -0.105  \cr\ln
+ 23  &     0.0  &     0.833  &    -3.383  &    -0.0  &    17.973  &    -3.981  &    -0.100  \cr\ln
+ 24  &     0.0  &     0.697  &    -3.373  &    -0.1  &    17.964  &    -4.004  &    -0.099  \cr\ln
+ 25  &     0.0  &     0.697  &    -3.373  &    -0.1  &    17.964  &    -4.004  &    -0.099  \cr\ln
+100  &     0.0  &    17.966  &    -1.958  &    -0.1  &    29.710  &    -2.309  &    -0.087  \cr\ln
+101  &     0.0  &    17.966  &    -1.958  &    -0.1  &    29.710  &    -2.309  &    -0.087  \cr\ln
+102  &     0.0  &    17.832  &    -1.968  &     0.1  &    29.696  &    -2.323  &    -0.087  \cr\ln
+103  &     0.0  &    17.596  &    -1.987  &    -0.1  &    29.671  &    -2.348  &    -0.088  \cr\ln
+104  &     0.0  &    17.462  &    -1.997  &     0.0  &    29.657  &    -2.362  &    -0.089  \cr\ln
+105  &     0.0  &    17.462  &    -1.997  &     0.0  &    29.657  &    -2.362  &    -0.089  \cr\ln
+120  &    -0.0  &     1.947  &    -3.418  &     0.0  &    19.442  &    -3.868  &    -0.103  \cr\ln
+121  &    -0.0  &     1.947  &    -3.418  &     0.0  &    19.442  &    -3.868  &    -0.103  \cr\ln
+122  &    -0.0  &     1.810  &    -3.407  &    -0.0  &    19.450  &    -3.893  &    -0.102  \cr\ln
+123  &    -0.0  &     0.442  &    -3.304  &     0.0  &    19.529  &    -4.138  &    -0.096  \cr\ln
+124  &     0.3  &     0.304  &    -3.294  &    -0.0  &    19.536  &    -4.163  &    -0.095  \cr\ln
+125  &     0.3  &     0.304  &    -3.294  &    -0.0  &    19.536  &    -4.163  &    -0.095  \cr\ln
+}
+
 \chapter{TOTEM Software}
 
 \> the technical aspects of my SW work
