--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -34,7 +34,7 @@ Hill's equation (Sec.~3.3 in \bref{wilson}, Eq.~(4.33) in \bref{dolezal} or in \
 
 \> Description of TOTEM detectors
 
-\subsection{The Roman Pot system}
+\subsection[rp system]{The Roman Pot system}
 
 \fig[15cm]{fig/external/RP_stations_original.pdf}{rp stations}{RP stations}
 \fig[10cm]{fig/external/rp_unit.jpg}{rp unit}{RP unit}
@@ -42,6 +42,15 @@ Hill's equation (Sec.~3.3 in \bref{wilson}, Eq.~(4.33) in \bref{dolezal} or in \
 \fig[10cm]{fig/external/rp_package.jpg}{rp package}{Detector package}
 \fig[10cm]{fig/external/hybrid2.jpg}{rp hybrid}{A hybrid with a silicon detector and four VFAT chips.}
 \fig[10cm]{fig/external/silicon_explained.png}{rp sensor}{A detail of a silicon sensor.}
+
+\htab{rp station}{The structure of the RP stations. The $z$ positions of the RP centers.}{
+\omit&\multispan6\bhrulefill\cr
+\omit&\multispan3\strut\bvrule\hfil near unit\hfil&\multispan3\vrule\hfil far unit\hfil\cr
+\omit&\multispan6\bhrulefill\cr
+\omit&\omit\bvrule\strut\hfil\hbox{top}\hfil & \hbox{bottom} &\hbox{horizontal} &\hbox{horizontal} &\hbox{top} &\hbox{bottom} \cr\bln
+\hbox{147 m station} & 148.784 & 148.784 & 149.234 & 150.026 & 150.476 & 150.476 \cr\ln
+\hbox{220 m station} & 214.628 & 214.628 & 215.078 & 219.550 & 220.000 & 220.000 \cr\bln
+}
 
 \section{Theoretical concepts}
 
